@@ -3,6 +3,7 @@ Version 3.1.2 To be released
 BUG: Ticket#719 - TAutoCompleter should not trigger Validation if CausesValidation=False (Christophe)
 CHG: Changed TConditional so that the controls in its template behave like they are in its parent (Qiang)
 CHG: Active Record many-to-many relationship change from self::HAS_MANY to self::MANY_TO_MANY (Wei)
+ENH: Ticket#722 - Add Read Only capabilities to TInPlaceTextBox (Christophe)
 ENH: Active Record supports multiple foreign references of the same table (Wei)
 ENH: Added TDbCommand.queryColumn() (Qiang)
 ENH: Active Record now supports implicitly declared related properties (Qiang)
